<resources>
    <string name="app_name">HuaweiCamera</string>

    <string name="frg_menu_title">Mode</string>
    <string name="frg_menu_photo">Photo</string>
    <string name="frg_menu_photo_pro">Photo-Pro</string>
    <string name="frg_menu_camera">Camera</string>
    <string name="frg_menu_night_mode">Night Mode</string>
    <string name="frg_menu_hdr_photo">HDR Photo</string>
    <string name="frg_menu_filter_effect">Filter Effect</string>
    <string name="frg_menu_landscape">Landscape</string>
    <string name="toast_switch_error">You can\'t use this feature in this camera mode.</string>
    <string name="frg_setting_title">Setting</string>
    <string name="frg_setting_common">Common</string>
    <string name="frg_setting_photo">Photo</string>
    <string name="frg_setting_video">Video</string>
    <string name="frg_setting_reset">Reset</string>
    <string name="frg_setting_sd_card_save">SD Card Save</string>
    <string name="frg_setting_shutter_sound">Shutter Sound</string>
    <string name="frg_setting_shutter_delay">Shutter Delay</string>
    <string name="frg_setting_sound_key">Sound key</string>
    <string name="frg_setting_photo_size">Photo Size</string>
    <string name="frg_setting_cross_pattern">Cross Pattern</string>
    <string name="frg_setting_mirror_effect">Mirror Effect</string>
    <string name="frg_setting_touch_focus">Touch Focus</string>
    <string name="frg_setting_video_size">Video Size</string>
    <string name="frg_setting_sound_record">Sound Record</string>
    <string name="frg_setting_reset_setting">Reset Setting</string>
    <string name="close">Close</string>
    <string name="time_second">2s</string>
    <string name="time_five">5s</string>
    <string name="time_ten">10s</string>
    <string name="frg_default">Default</string>
    <string name="frg_none">None</string>
    <string name="dia_zoom">Zoom</string>
    <string name="dia_16M">16M xxxxx</string>
    <string name="dia_12M">12M xxxxx</string>
    <string name="dia_8M">8M xxxxx</string>
    <string name="dia_4M">4M xxxxx</string>
    <string name="dia_2M">2M xxxxx</string>
    <string name="dia_rect_pattern">Rect Pattern</string>
    <string name="dia_gold_rate_pattern">Gold Rate Pattern</string>
    <string name="dia_left_rate_pattern">Left Rate Pattern</string>
    <string name="dia_right_rate_pattern">Right Rate Pattern</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="alert_reset_content">Are you going to reset all settings?</string>
    <string name="frg_setting_sd_detail">The photo and video are saved in SD Card.</string>
    <string name="frg_setting_mirror_detail">This feature can be used in front carmera.</string>

    <string name="filter_none">Original</string>
    <string name="filter_amaro">Amaro</string>
    <string name="filter_brannan">Brannan</string>
    <string name="filter_brooklyn">Brooklyn</string>
    <string name="filter_Earlybird">EarlyBird</string>
    <string name="filter_freud">Freud</string>
    <string name="filter_hefe">Hefe</string>
    <string name="filter_hudson">Hudson</string>
    <string name="filter_inkwell">Inkwell</string>
    <string name="filter_kevin">Kevin</string>
    <string name="filter_lomo">Lomo</string>
    <string name="filter_n1977">1977</string>
    <string name="filter_nashville">Nashville</string>
    <string name="filter_pixar">Pixar</string>
    <string name="filter_rise">Rise</string>
    <string name="filter_sierra">Sierra</string>
    <string name="filter_sutro">Sutro</string>
    <string name="filter_toastero">Toaster2</string>
    <string name="filter_valencia">Valencia</string>
    <string name="filter_walden">Walden</string>
    <string name="filter_xproii">XproII</string>
    <string name="filter_whitecat">WhiteCat</string>
    <string name="filter_blackcat">BlackCat</string>
    <string name="filter_romance">Romance</string>
    <string name="filter_sakura">Sakura</string>
    <string name="filter_antique">Antique</string>
    <string name="filter_beauty">Beauty</string>
    <string name="filter_calm">Calm</string>
    <string name="filter_cool">Cool</string>
    <string name="filter_emerald">Emerald</string>
    <string name="filter_evergreen">Evergreen</string>
    <string name="filter_fairytale">Fairytale</string>
    <string name="filter_healthy">Healthy</string>
    <string name="filter_latte">Latte</string>
    <string name="filter_nostalgia">Nostalgia</string>
    <string name="filter_tender">Tender</string>
    <string name="filter_warm">Warm</string>
    <string name="filter_sweets">Sweets</string>
    <string name="filter_sunrise">Sunrise</string>
    <string name="filter_sunset">Sunset</string>
    <string name="filter_skinwhiten">SkinWhiten</string>
    <string name="filter_crayon">Crayon</string>
    <string name="filter_sketch">Sketch</string>
    <string name="filter_name_none">None</string>
    <string name="filter_name_inkwell">Inkwell</string>
    <string name="filter_name_sketch">Sketch</string>
    <string name="filter_name_fairytale">Fairytale</string>
    <string name="filter_name_nostalgia">Nostalgia</string>
    <string name="filter_name_cool">Cool</string>
    <string name="filter_name_earlybird">Earlybird</string>
    <string name="filter_name_toastero">Toastero</string>
    <string name="filter_name_walden">Walden</string>
    <string name="filter_face_smooth">Smooth</string>
    <string name="filter_face_white">White</string>
    <string name="filter_face_slim">Slimming</string>
    <string name="filter_face_bigeyes">Bigeyes</string>
</resources>
