<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rad_shutter_delay"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rab_shutter_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frg_none"
            android:paddingLeft="10dip"
            android:textSize="16dp"/>
        <RadioButton
            android:id="@+id/rab_shutter_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_second"
            android:paddingLeft="10dip"
            android:textSize="16dp"/>
        <RadioButton
            android:id="@+id/rab_shutter_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_five"
            android:paddingLeft="10dip"
            android:textSize="16dp"/>
        <RadioButton
            android:id="@+id/rab_shutter_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_ten"
            android:paddingLeft="10dip"
            android:textSize="16dp"/>
    </RadioGroup>

</LinearLayout>